  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - fixed typo (thanks to Henrique P. Machado)
  * UpdateManager/UpdateManager.py:
    - fix i18n issues with gtkbuilder
  * DistUpgrade/DistUpgradeQuirks.py:
    - stop kblueplugd kbluetooth when the upgrade starts to
      avoid them crashing during the upgrade 
      (thanks to Jonathan Riddell)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 11:01:28 +0200

update-manager (1:0.125.2) karmic; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - add check for 5Mb safety buffer in /tmp, this ensures that
      dkms can run and ensure we do not run when /tmp is mounted
      in overflow mode (LP: #427035)
  * data/glade/UpdateManager.ui:
    - remove dialog title for the battery warning and fix button
      order (thanks to Matthew Paul Thomas)
  * data/glade/UpdateManager.ui:
    - fix duplicated accelerator keys (LP: #425817)
  * UpdateManager/UpdateManager.py:
    - close app when ESC is pressed in the battery warning
  * UpdateManager/UpdateManager.py:
    - ensure that the changelog always matches the currently selected
      pkg by fixing race during download (LP: #424918) 
  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - do not hang when cancel is clicked (LP: #426718)
  * add sed patch facility and patch the gnome debconf frontend 
    before the upgrade starts so that it can not crash when 
    perl moves from 5.8.0 to 5.10.0 (LP: #387112)
  * data/glade/UpdateManager.ui:
    - use bigger default width (LP: #418201)

  [ Brian Murray ]
  * typo fixes (thanks to Brian Murray, LP: #423409)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 10:50:24 +0200

update-manager (1:0.125.1) karmic; urgency=low

  [ Josh Holland ]
  * Fixed several typos (LP: #93804, LP: #277731, LP: #404435)
  
  [ Rugby471 ]
  * Center window on the screen (LP: #423355)
  
  [ Michael Vogt ]
  * DistUpgrade/DistUpgrade.ui: