@@ -14,6 +14,8 @@ update-manager (1:0.125.3) UNRELEASED; urgency=low
     - stop kblueplugd kbluetooth when the upgrade starts to
       avoid them crashing during the upgrade 
       (thanks to Jonathan Riddell)
+  * UpdateManager/backend/InstallBackendAptdaemon.py
+    - setup correct window icon
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 11:01:28 +0200
 
